# entropy-descent

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: enemies.json  items.json  spells.json  vows.json
include/: Components.hpp  DataLoader.hpp  Definitions.hpp  Events.hpp  Game.hpp  Map.hpp  StateMachine.hpp  UIRenderer.hpp  WorldBuilder.hpp  events.hpp
include/States/: MenuState.hpp  PlayState.hpp  State.hpp  States.hpp  VowState.hpp
include/Systems/: AISystem.hpp  CombatSystem.hpp  ItemSystem.hpp  MovementSystem.hpp  RenderSystem.hpp  SpellSystem.hpp
scripts/: ai.lua  combat.lua  spells.lua
src/: DataLoader.cpp  Game.cpp  UIRenderer.cpp  WorldBuilder.cpp  main.cpp
src/States/: MenuState.cpp  PlayState.cpp  VowState.cpp
src/Systems/: AISystem.cpp  CombatSystem.cpp  ItemSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  SpellSystem.cpp
tools/: generate_enemies.py  validate_data.py
